    * Added a dragEndHandler event callback, called when a drag gesture ends
    * Added a pinchHandler event callback, called as a pinch gesture (2 touch points) is occurring
    * Added real-time velocity (speed and direction) tracking to drag operations. 'speed' and 'direction' values are passed in the dragHandler and dragEndHandler event data

1.0.0:

NOTE: This version has a number of breaking changes to the API, mostly in event handling. See below.

* BREAKING CHANGE: All EventSource and MouseTracker event handler method signatures changed to 'handlerMethod(event)' where event == { eventSource, userData, ... } (#251) (Also fixes #23, #224, #239)
    * The new eventSource property in the event object replaces the old eventSource parameter that was passed to handler methods.
    * Where the event object duplicated the eventSource value, those properties have been removed. This affects the following events:
        * All Button events - 'button' property removed
        * All Viewer (Viewer, Drawer, Viewport) events - 'viewer' property removed
* BREAKING CHANGE: Renamed EventHandler to EventSource (#225)
* BREAKING CHANGE: Event names changed for consistency: changed to lower case, compound names hyphenated, and "on" prefixes removed (#226):
    * Viewer "animationstart" changed to "animation-start"
    * Viewer "animationfinish" changed to "animation-finish"
    * Button "onPress" changed to "press"
    * Button "onRelease" changed to "release"
    * Button "onClick" changed to "click"
    * Button "onEnter" changed to "enter"
    * Button "onExit" changed to "exit"
    * Button "onFocus" changed to "focus"
    * Button "onBlur" changed to "blur"
* BREAKING CHANGE: Numerous improvements to fullPage/fullScreen (#256):
    * Retains zoom/pan position better when switching into and out of fullPage.
    * Retains scroll position when switching back out.
    * More resilient to styling variations on the page.